--- a/style.css
+++ b/style.css
@@ -59,3 +59,21 @@
     background-color: rgb(0, 102, 255);
     color: white;
 }
+
+.uv1{
+    background-color: yellow;
+    padding: 1px;
+    color: black;
+}
+
+.uv2{
+    background-color: orange;
+    padding: 1px;
+    color: black;
+}
+
+.uv3{
+    background-color: crimson;
+    padding: 1px;
+    color: white;
+}
